chore: add requirement for alphabetical arguments

--- a/package.json
+++ b/package.json
@@ -217,6 +217,10 @@
             {
               "selections": [
                 "OperationDefinition"
+              ],
+              "arguments": [
+                "Field",
+                "FieldDefinition"
               ]
             }
           ]
