refactor: add graphql linting to lint-staged

--- a/package.json
+++ b/package.json
@@ -259,6 +259,10 @@
       "prettier --write",
       "git add"
     ],
+    "*.{graphql}": [
+      "yarn lint:graphql --fix",
+      "git add"
+    ],
     "!(.github/**).{yml,yaml}": [
       "prettier --write",
       "yaml-sort --quotingStyle double --input",
