--- a/packages/itinerary-body/package.json
+++ b/packages/itinerary-body/package.json
@@ -35,7 +35,9 @@
     "url": "https://github.com/opentripplanner/otp-ui/issues"
   },
   "scripts": {
-    "tsc": "tsc"
+    "tsc": "tsc",
+    "build:cjs": "../../scripts/build-cjs.sh",
+    "build:esm": "../../scripts/build-esm.sh"
   },
   "gitHead": "0af1b7cda60bd4252b219dcf893e01c2acb2ed5d"
 }
