--- a/packages/scripts/package.json
+++ b/packages/scripts/package.json
@@ -20,7 +20,9 @@
   "scripts": {
     "collect-i18n": "node lib/run-collect-i18n-messages.js ../**/src ../**/i18n/en-US.yml > i18n.csv",
     "tsc": "tsc",
-    "validate-i18n": "node lib/run-validate-i18n.js ../**/src ../**/i18n"
+    "validate-i18n": "node lib/run-validate-i18n.js ../**/src ../**/i18n",
+    "build:cjs": "../../scripts/build-cjs.sh",
+    "build:esm": "../../scripts/build-esm.sh"
   },
   "bugs": {
     "url": "https://github.com/opentripplanner/otp-ui/issues"
