--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,12 @@ node_modules
 storybook-static/
 *.tsbuildinfo
 .vscode/
+
+#Yarn 2
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
