Revert "build: migrate lockfile to yarn2"
This reverts commit c3ae15240d5c8732eca188afeb0031414682eaf4.

--- a/packages/scripts/package.json
+++ b/packages/scripts/package.json
@@ -9,6 +9,7 @@
   "homepage": "https://github.com/opentripplanner/otp-ui#readme",
   "author": "Binh Dam",
   "license": "MIT",
+  "private": false,
   "dependencies": {
     "@formatjs/cli": "^4.2.33",
     "flat": "^5.0.2",
