--- a/packages/endpoints-overlay/package.json
+++ b/packages/endpoints-overlay/package.json
@@ -22,10 +22,10 @@
   },
   "dependencies": {
     "@opentripplanner/base-map": "^3.0.11",
-    "@opentripplanner/core-utils": "^8.2.1",
     "@opentripplanner/location-icon": "^1.4.1",
-    "@styled-icons/fa-solid": "^10.34.0",
-    "flat": "^5.0.2"
+    "@opentripplanner/core-utils": "^8.2.1",
+    "flat": "^5.0.2",
+    "@styled-icons/fa-solid": "^10.34.0"
   },
   "devDependencies": {
     "@types/flat": "^5.0.2"
