--- a/packages/from-to-location-picker/package.json
+++ b/packages/from-to-location-picker/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "main": "lib/index.js",
   "module": "esm/index.js",
+  "private": false,
   "dependencies": {
     "@opentripplanner/location-icon": "^1.4.1",
     "flat": "^5.0.2"
