--- a/packages/itinerary-body/package.json
+++ b/packages/itinerary-body/package.json
@@ -8,6 +8,7 @@
   "homepage": "https://github.com/opentripplanner/otp-ui#readme",
   "author": "Evan Siroky",
   "license": "MIT",
+  "private": false,
   "dependencies": {
     "@opentripplanner/core-utils": "^8.2.1",
     "@opentripplanner/humanize-distance": "^1.2.0",
