--- a/packages/location-field/package.json
+++ b/packages/location-field/package.json
@@ -7,6 +7,7 @@
   "repository": "https://github.com/opentripplanner/otp-ui.git",
   "author": "Evan  Siroky",
   "license": "MIT",
+  "private": false,
   "dependencies": {
     "@conveyal/geocoder-arcgis-geojson": "^0.0.3",
     "@opentripplanner/core-utils": "^8.2.1",
