--- a/packages/printable-itinerary/package.json
+++ b/packages/printable-itinerary/package.json
@@ -8,6 +8,7 @@
   "homepage": "https://github.com/opentripplanner/otp-ui#readme",
   "author": "Evan Siroky",
   "license": "MIT",
+  "private": false,
   "dependencies": {
     "@opentripplanner/core-utils": "^8.2.1",
     "@opentripplanner/itinerary-body": "^4.1.17"
