--- a/packages/transit-vehicle-overlay/package.json
+++ b/packages/transit-vehicle-overlay/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "main": "lib/index.js",
   "module": "esm/index.js",
+  "private": false,
   "dependencies": {
     "@opentripplanner/base-map": "^3.0.11",
     "@opentripplanner/core-utils": "^8.2.1",
