--- a/packages/trip-form/package.json
+++ b/packages/trip-form/package.json
@@ -8,9 +8,10 @@
   "main": "lib/index.js",
   "module": "esm/index.js",
   "types": "lib/index.d.ts",
+  "private": false,
   "dependencies": {
-    "@floating-ui/react": "^0.19.2",
     "@opentripplanner/core-utils": "^8.2.1",
+    "@floating-ui/react": "^0.19.2",
     "@styled-icons/bootstrap": "^10.34.0",
     "@styled-icons/boxicons-regular": "^10.38.0",
     "@styled-icons/fa-regular": "^10.37.0",
@@ -21,8 +22,8 @@
     "react-inlinesvg": "^2.3.0"
   },
   "devDependencies": {
-    "@opentripplanner/types": "6.0.0-alpha.4",
-    "@types/flat": "^5.0.2"
+    "@types/flat": "^5.0.2",
+    "@opentripplanner/types": "6.0.0-alpha.4"
   },
   "peerDependencies": {
     "react": "^16.14.0",
