--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -7,6 +7,7 @@
   "repository": "https://github.com/opentripplanner/otp-ui.git",
   "author": "Binh Dam",
   "license": "MIT",
+  "private": false,
   "scripts": {
     "tsc": "tsc",
     "build:cjs": "../../scripts/build-cjs.sh",
