build: upgrade lerna to latest

--- a/package.json
+++ b/package.json
@@ -68,10 +68,11 @@
     "jest-styled-components": "^7.0.5",
     "js-yaml": "^4.1.0",
     "json-loader": "^0.5.7",
-    "lerna": "^3.18.4",
+    "lerna": "^7.0.2",
     "lint-staged": "^8.2.0",
     "msw": "^0.34.0",
     "nock": "^11.7.0",
+    "nx-cloud": "^16.0.5",
     "prettier": "^1.19.1",
     "puppeteer": "^10.2.0",
     "react": "^17.0.2",
@@ -97,12 +98,11 @@
   },
   "scripts": {
     "a11y-test": "yarn build-storybook && jest --testPathIgnorePatterns packages storybook",
-    "bootstrap": "lerna bootstrap --use-workspaces",
-    "build:cjs": "lerna exec --parallel -- babel --extensions '.js,.ts,.tsx' --ignore **/*.story.js,**/*.story.ts,**/*.story.d.ts,**/*.story.tsx,**/*.spec.js,**/*.spec.ts,**/*.test.js,**/*.test.ts,**/__tests__/**,**/__unpublished__/** --root-mode upward --source-maps true src -d lib",
-    "build:esm": "lerna exec --parallel -- cross-env BABEL_ENV=esm babel --extensions '.js,.ts,.tsx' --ignore **/*.story.js,**/*.story.ts,**/*.story.d.ts,**/*.story.tsx,**/*.spec.js,**/*.spec.ts,**/*.test.js,**/*.test.ts,**/__tests__/**,**/__unpublished__/** --root-mode upward --source-maps true src -d esm",
+    "build:cjs": "lerna run build:ejs",
+    "build:esm": "lerna run build:esm",
     "check:i18n-all": "node packages/scripts/lib/run-validate-i18n.js packages/**/src packages/**/i18n",
     "check:i18n-en-fr": "node packages/scripts/lib/run-validate-i18n.js packages/**/src packages/**/i18n/en-US.yml packages/**/i18n/fr.yml",
-    "prepublish": "yarn typescript && yarn build:cjs && yarn build:esm",
+    "prepublish": "yarn tsc && yarn build:cjs && yarn build:esm",
     "check-eslint-config": "eslint --print-config jestconfig.js | eslint-config-prettier-check",
     "coverage": "jest --coverage",
     "deploy-storybook": "storybook-to-ghpages",
@@ -115,8 +115,8 @@
     "lint": "yarn lint:js && yarn lint:styles && yarn lint:graphql",
     "prettier": "prettier --write \"**/*.{json,md,yml}\"",
     "semantic-release": "lerna exec --concurrency 1 -- semantic-release -e semantic-release-monorepo",
-    "test": "yarn lint:js && yarn lint:styles && yarn check:i18n-en-fr && yarn typescript && yarn unit && yarn a11y-test",
-    "typescript": "lerna run tsc",
+    "test": "yarn lint:js && yarn lint:styles && yarn check:i18n-en-fr && yarn tsc && yarn unit && yarn a11y-test",
+    "tsc": "lerna run tsc",
     "unit": "jest --testPathIgnorePatterns a11y .d.ts",
     "update-internal-dependencies": "node scripts/update-internal-dependencies.js"
   },
