--- a/packages/printable-itinerary/package.json
+++ b/packages/printable-itinerary/package.json
@@ -11,7 +11,7 @@
   "private": false,
   "dependencies": {
     "@opentripplanner/core-utils": "^8.2.1",
-    "@opentripplanner/itinerary-body": "^4.1.17"
+    "@opentripplanner/itinerary-body": "^4.2.0-alpha.3"
   },
   "devDependencies": {
     "@opentripplanner/icons": "^2.0.1"
