i18n: improve french text

--- a/packages/trip-details/__mocks__/custom-french-messages.yml
+++ b/packages/trip-details/__mocks__/custom-french-messages.yml
@@ -3,7 +3,7 @@ otpUi:
     FareTable:
       cash: Espèces
       electronic: ORCA
-      regular: Ordinaire
+      regular: Plein tarif
       senior: Senior
       special: LIFT
       youth: Jeune
