--- a/.gitignore
+++ b/.gitignore
@@ -7,4 +7,11 @@ node_modules
 .idea
 storybook-static/
 *.tsbuildinfo
-.vscode/
+.vscode
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
