--- a/packages/geocoder/package.json
+++ b/packages/geocoder/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@conveyal/geocoder-arcgis-geojson": "^0.0.3",
     "@conveyal/lonlat": "^1.4.1",
+    "@types/geojson": "^7946.0.10",
     "isomorphic-mapzen-search": "^1.6.1",
     "lodash.memoize": "^4.1.2"
   },
