--- a/packages/park-and-ride-overlay/package.json
+++ b/packages/park-and-ride-overlay/package.json
@@ -19,8 +19,9 @@
     "url": "https://github.com/opentripplanner/otp-ui/issues"
   },
   "dependencies": {
-    "@opentripplanner/base-map": "^3.0.11",
-    "@opentripplanner/from-to-location-picker": "^2.1.6"
+    "@opentripplanner/base-map": "^3.0.13",
+    "@opentripplanner/from-to-location-picker": "^2.1.7",
+    "@opentripplanner/types": "workspace:^"
   },
   "peerDependencies": {
     "react": "^16.14.0",
