--- a/packages/route-viewer-overlay/package.json
+++ b/packages/route-viewer-overlay/package.json
@@ -20,16 +20,18 @@
   },
   "dependencies": {
     "@mapbox/polyline": "^1.1.0",
-    "@opentripplanner/base-map": "^3.0.11",
-    "@opentripplanner/core-utils": "^8.2.1",
+    "@opentripplanner/base-map": "^3.0.13",
+    "@opentripplanner/core-utils": "^9.0.0",
     "point-in-polygon": "^1.1.0"
   },
   "devDependencies": {
-    "@opentripplanner/types": "^5.0.0",
+    "@opentripplanner/types": "^6.0.0",
     "point-in-polygon": "^1.1.0"
   },
   "peerDependencies": {
-    "react": "^16.14.0"
+    "maplibre-gl": "^2.1.9",
+    "react": "^16.14.0",
+    "react-map-gl": "^7.0.15"
   },
   "gitHead": "0af1b7cda60bd4252b219dcf893e01c2acb2ed5d"
 }
