build: fix some version issues

--- a/packages/location-field/package.json
+++ b/packages/location-field/package.json
@@ -17,6 +17,7 @@
     "throttle-debounce": "^2.1.0"
   },
   "devDependencies": {
+    "@opentripplanner/types": "workspace:^",
     "@types/throttle-debounce": "^2.1.0"
   },
   "peerDependencies": {
