--- a/packages/park-and-ride-overlay/package.json
+++ b/packages/park-and-ride-overlay/package.json
@@ -21,8 +21,8 @@
     "url": "https://github.com/opentripplanner/otp-ui/issues"
   },
   "dependencies": {
-    "@opentripplanner/base-map": "^3.0.13",
-    "@opentripplanner/from-to-location-picker": "^2.1.7",
+    "@opentripplanner/base-map": "workspace:^",
+    "@opentripplanner/from-to-location-picker": "workspace:^",
     "@opentripplanner/types": "workspace:^"
   },
   "peerDependencies": {
