--- a/.github/workflows/node-ci.yml
+++ b/.github/workflows/node-ci.yml
@@ -9,6 +9,9 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 16.x
+          cache: 'yarn'
+      - name: Install Dependencies
+        run: yarn install --immutable
       - name: Lint code
         run: yarn lint:js
       - name: Lint styles
