--- a/.github/workflows/node-ci.yml
+++ b/.github/workflows/node-ci.yml
@@ -10,8 +10,8 @@ jobs:
         with:
           node-version: 16.x
           cache: 'yarn'
-      - name: Install Dependencies
-        run: yarn install --immutable
+      - name: Install npm packages using cache
+        uses: bahmutov/npm-install@v1
       - name: Run babel
         run: yarn prepublish
       - name: Lint code
