--- a/packages/trip-details/package.json
+++ b/packages/trip-details/package.json
@@ -11,7 +11,7 @@
   "license": "MIT",
   "private": false,
   "dependencies": {
-    "@opentripplanner/core-utils": "^9.0.0-alpha.36",
+    "@opentripplanner/core-utils": "^9.0.2",
     "@styled-icons/fa-solid": "^10.34.0",
     "flat": "^5.0.2",
     "react-animate-height": "^3.0.4"
