--- a/packages/trip-form/modeSettings.yml
+++ b/packages/trip-form/modeSettings.yml
@@ -17,11 +17,8 @@
   step: 0.1
   type: SLIDER
 - applicableMode: TRANSIT
-  default: 2
+  default: true
   graphQLQueryParam: true
-  high: 5
-  inverseKey: walkReluctance
-  key: walkTolerance
-  low: 0
-  step: 0.1
-  type: SLIDER
+  key: walkReluctance
+  truthValue: 5
+  type: CHECKBOX
