--- a/packages/trip-form/modeSettings.yml
+++ b/packages/trip-form/modeSettings.yml
@@ -17,8 +17,9 @@
   step: 0.1
   type: SLIDER
 - applicableMode: TRANSIT
-  default: true
+  default: false
   graphQLQueryParam: true
+  id: walkReluctance
   key: walkReluctance
   truthValue: 5
   type: CHECKBOX
