Revert "feat(trip-form): support config mode subsetting"
This reverts commit 2801dca569fa3331b5933138d11258cae523dd4c.

--- a/packages/trip-form/modeSettings.yml
+++ b/packages/trip-form/modeSettings.yml
@@ -17,9 +17,8 @@
   step: 0.1
   type: SLIDER
 - applicableMode: TRANSIT
-  default: false
+  default: true
   graphQLQueryParam: true
-  id: walkReluctance
   key: walkReluctance
   truthValue: 5
   type: CHECKBOX
