--- a/packages/trip-details/package.json
+++ b/packages/trip-details/package.json
@@ -11,13 +11,13 @@
   "license": "MIT",
   "private": false,
   "dependencies": {
-    "@opentripplanner/core-utils": "^9.0.3",
+    "@opentripplanner/core-utils": "^11.0.1",
     "@styled-icons/fa-solid": "^10.34.0",
     "flat": "^5.0.2",
     "react-animate-height": "^3.0.4"
   },
   "devDependencies": {
-    "@opentripplanner/types": "^6.0.0-alpha.9",
+    "@opentripplanner/types": "^6.0.0",
     "@types/flat": "^5.0.2"
   },
   "peerDependencies": {
