--- a/packages/trip-viewer-overlay/package.json
+++ b/packages/trip-viewer-overlay/package.json
@@ -20,7 +20,8 @@
   "dependencies": {
     "@mapbox/polyline": "^1.1.0",
     "@opentripplanner/core-utils": "^7.0.0",
-    "prop-types": "^15.7.2"
+    "prop-types": "^15.7.2",
+    "react-leaflet-arrowheads": "^1.1.0"
   },
   "peerDependencies": {
     "@opentripplanner/base-map": "^2.0.0",
