--- a/packages/transit-vehicle-overlay/package.json
+++ b/packages/transit-vehicle-overlay/package.json
@@ -12,12 +12,13 @@
     "@opentripplanner/core-utils": "^7.0.0",
     "@opentripplanner/icons": "^1.2.1",
     "@opentripplanner/zoom-based-markers": "^1.2.1",
+    "@styled-icons/fa-solid": "^10.34.0",
     "@turf/helpers": "^6.5.0",
     "@turf/nearest-point-on-line": "^6.5.0",
     "flat": "^5.0.2",
     "leaflet-rotatedmarker": "^0.2.0",
     "lodash.clonedeep": "^4.5.0",
-    "@styled-icons/fa-solid": "^10.34.0",
+    "react-leaflet-arrowheads": "^1.1.0",
     "throttle-debounce": "^2.1.0"
   },
   "peerDependencies": {
