--- a/packages/transitive-overlay/package.json
+++ b/packages/transitive-overlay/package.json
@@ -18,8 +18,9 @@
     "url": "git+https://github.com/opentripplanner/otp-ui.git"
   },
   "dependencies": {
-    "@opentripplanner/itinerary-body": "^4.0.0",
     "@opentripplanner/core-utils": "^7.0.0",
+    "@opentripplanner/itinerary-body": "^4.0.0",
+    "leaflet-polylinedecorator": "^1.6.0",
     "lodash.isequal": "^4.5.0",
     "transitive-js": "^0.14.1"
   },
