--- a/packages/itinerary-body/package.json
+++ b/packages/itinerary-body/package.json
@@ -24,7 +24,7 @@
     "string-similarity": "^4.0.4"
   },
   "devDependencies": {
-    "@opentripplanner/types": "^6.1.0",
+    "@opentripplanner/types": "^7.0.0-alpha.10",
     "@types/flat": "^5.0.2"
   },
   "peerDependencies": {
