--- a/packages/building-blocks/package.json
+++ b/packages/building-blocks/package.json
@@ -11,11 +11,11 @@
   "dependencies": {
     "mapbox-gl": "npm:empty-npm-package@1.0.0",
     "maplibre-gl": "^2.1.9",
-    "react-map-gl": "^7.0.15"
+    "react-map-gl": "^7.0.15",
+    "@opentripplanner/core-utils": "9.0.3"
   },
   "peerDependencies": {
     "@opentripplanner/types": "^6.1.0",
-    "@opentripplanner/core-utils": "9.0.3",
     "react": "^16.14.0",
     "styled-components": "^5.3.0"
   },
