--- a/packages/building-blocks/package.json
+++ b/packages/building-blocks/package.json
@@ -8,6 +8,9 @@
   "main": "lib/index.js",
   "module": "esm/index.js",
   "private": false,
+  "devDependencies": {
+    "@opentripplanner/core-utils": "^11.1.3"
+  },
   "peerDependencies": {
     "react": "^16.14.0",
     "styled-components": "^5.3.0"
