--- a/packages/building-blocks/package.json
+++ b/packages/building-blocks/package.json
@@ -9,7 +9,7 @@
   "module": "esm/index.js",
   "private": false,
   "dependencies": {
-    "color-contrast": "^1.0.0",
+    "chroma-js": "^2.4.2",
     "mapbox-gl": "npm:empty-npm-package@1.0.0",
     "maplibre-gl": "^2.1.9",
     "react-map-gl": "^7.0.15",
