--- a/packages/core-utils/package.json
+++ b/packages/core-utils/package.json
@@ -30,7 +30,7 @@
     "tsc": "tsc"
   },
   "devDependencies": {
-    "@opentripplanner/types": "^7.0.0-alpha.9",
+    "@opentripplanner/types": "^6.3.0",
     "@types/chroma-js": "^2.1.4"
   }
 }
