--- a/packages/otp2-tile-overlay/package.json
+++ b/packages/otp2-tile-overlay/package.json
@@ -16,7 +16,7 @@
     "react-map-gl": "^7.0.15"
   },
   "dependencies": {
-    "@opentripplanner/map-popup": "^2.0.7-alpha.1"
+    "@opentripplanner/map-popup": "^3.0.0"
   },
   "devDependencies": {
     "@opentripplanner/base-map": "^3.0.15",
