--- a/packages/trip-form/package.json
+++ b/packages/trip-form/package.json
@@ -23,7 +23,7 @@
   },
   "devDependencies": {
     "@types/flat": "^5.0.2",
-    "@opentripplanner/types": "7.0.0-alpha.2"
+    "@opentripplanner/types": "6.3.0"
   },
   "peerDependencies": {
     "react": "^16.14.0",
