--- a/packages/building-blocks/package.json
+++ b/packages/building-blocks/package.json
@@ -9,7 +9,8 @@
   "module": "esm/index.js",
   "private": false,
   "dependencies": {
-    "chroma-js": "^2.4.2",
+    "chroma-js": "^2.4.2"
+  },
   "devDependencies": {
     "@opentripplanner/types": "^6.2.1",
     "@opentripplanner/core-utils": "^11.1.3"
