--- a/packages/core-utils/package.json
+++ b/packages/core-utils/package.json
@@ -27,7 +27,7 @@
   },
   "gitHead": "0af1b7cda60bd4252b219dcf893e01c2acb2ed5d",
   "scripts": {
-    "prepare": "tsc",
+    "prepare": "yarn tsc",
     "tsc": "tsc"
   },
   "devDependencies": {
