--- a/package.json
+++ b/package.json
@@ -24,17 +24,17 @@
     "@formatjs/cli": "^4.2.32",
     "@graphql-eslint/eslint-plugin": "^3.19.1",
     "@semantic-release/git": "^9.0.0",
-    "@storybook/addon-a11y": "^6.4.19",
-    "@storybook/addon-actions": "^6.4.19",
-    "@storybook/addon-docs": "^6.4.19",
-    "@storybook/addon-essentials": "^6.4.19",
-    "@storybook/addon-knobs": "^6.3.0",
-    "@storybook/addon-links": "^6.4.19",
-    "@storybook/addon-storyshots": "^6.4.19",
-    "@storybook/addon-storyshots-puppeteer": "^6.4.19",
-    "@storybook/addon-storysource": "^6.4.19",
-    "@storybook/addon-viewport": "^6.4.19",
-    "@storybook/react": "^6.4.19",
+    "@storybook/addon-a11y": "7.6.17",
+    "@storybook/addon-actions": "7.6.17",
+    "@storybook/addon-docs": "7.6.17",
+    "@storybook/addon-essentials": "7.6.17",
+    "@storybook/addon-links": "7.6.17",
+    "@storybook/addon-storyshots": "7.6.17",
+    "@storybook/addon-storyshots-puppeteer": "7.6.17",
+    "@storybook/addon-storysource": "7.6.17",
+    "@storybook/addon-viewport": "7.6.17",
+    "@storybook/react": "7.6.17",
+    "@storybook/react-webpack5": "7.6.17",
     "@storybook/storybook-deployer": "^2.8.10",
     "@types/jest": "^26.0.23",
     "@types/node": "^15.0.0",
@@ -81,7 +81,8 @@
     "semantic-release": "^17.1.1",
     "semantic-release-monorepo": "^7.0.2",
     "semver": "^7.3.2",
-    "storybook-react-intl": "^1.0.5",
+    "storybook": "7.6.17",
+    "storybook-react-intl": "^2.0.10",
     "styled-components": "^5.3.0",
     "stylelint": "^10.1.0",
     "stylelint-config-prettier": "^5.2.0",
@@ -92,7 +93,7 @@
     "typescript": "^4.2.4",
     "webpack": "^4.33.0",
     "yaml-jest": "^1.2.0",
-    "yaml-loader": "^0.6.0",
+    "yaml-loader": "^0.8.1",
     "yaml-sort": "^2.0.0"
   },
   "scripts": {
@@ -106,7 +107,7 @@
     "check-eslint-config": "eslint --print-config jestconfig.js | eslint-config-prettier-check",
     "coverage": "jest --coverage",
     "deploy-storybook": "storybook-to-ghpages",
-    "dev": "start-storybook -s ./public -p 5555",
+    "dev": "storybook dev -s ./public -p 5555",
     "predev": "yarn",
     "lint:js": "eslint . --ext .js,.jsx,.ts,.tsx --ignore-pattern esm --ignore-pattern lib --ignore-pattern node_modules --ignore-pattern storybook-static --quiet",
     "lint:graphql": "eslint . --ext .graphql --ignore-pattern esm --ignore-pattern lib --ignore-pattern node_modules --ignore-pattern storybook-static",
@@ -271,5 +272,8 @@
   },
   "msw": {
     "workerDirectory": "public"
+  },
+  "dependencies": {
+    "@storybook/icons": "^1.2.9"
   }
 }
