--- a/package.json
+++ b/package.json
@@ -83,7 +83,7 @@
     "semantic-release-monorepo": "^7.0.2",
     "semver": "^7.3.2",
     "storybook": "7.6.17",
-    "storybook-react-intl": "^2.0.10",
+    "storybook-react-intl": "^3.0.1",
     "styled-components": "^5.3.0",
     "stylelint": "^10.1.0",
     "stylelint-config-prettier": "^5.2.0",
@@ -104,6 +104,7 @@
     "build:esm": "lerna exec --parallel -- cross-env BABEL_ENV=esm babel --extensions '.js,.ts,.tsx' --ignore **/*.story.js,**/*.story.ts,**/*.story.d.ts,**/*.story.tsx,**/*.spec.js,**/*.spec.ts,**/*.test.js,**/*.test.ts,**/__tests__/**,**/__unpublished__/** --root-mode upward --source-maps true src -d esm",
     "check:i18n-all": "node packages/scripts/lib/run-validate-i18n.js packages/**/src packages/**/i18n",
     "check:i18n-en-fr": "node packages/scripts/lib/run-validate-i18n.js packages/**/src packages/**/i18n/en-US.yml packages/**/i18n/fr.yml",
+    "clean": "git clean -Xdf",
     "prepublish": "yarn typescript && yarn build:cjs && yarn build:esm",
     "check-eslint-config": "eslint --print-config jestconfig.js | eslint-config-prettier-check",
     "coverage": "jest --coverage",
