update ci test command

--- a/.github/workflows/node-ci.yml
+++ b/.github/workflows/node-ci.yml
@@ -27,7 +27,7 @@ jobs:
         run: |
           npx concurrently -k -s first -n "SB,TEST" -c "magenta,blue" \
             "npx http-server storybook-static --port 6006 --silent" \
-            "npx wait-on tcp:6006 && yarn unit"
+            "npx wait-on tcp:6006 && yarn test-storybook"
       # - name: Run a11y tests
       #   run: yarn a11y-test
       - env:
