--- a/package.json
+++ b/package.json
@@ -82,7 +82,7 @@
     "semver": "^7.3.2",
     "storybook": "7.6.17",
     "storybook-mock-date-decorator": "^1.0.2",
-    "storybook-react-intl": "^3.0.1",
+    "@danielhep/storybook-react-intl": "3.0.1",
     "styled-components": "^5.3.0",
     "stylelint": "^10.1.0",
     "stylelint-config-prettier": "^5.2.0",
