--- a/.github/workflows/node-ci.yml
+++ b/.github/workflows/node-ci.yml
@@ -25,14 +25,14 @@ jobs:
         run: yarn build-storybook --quiet
       - name: Serve Storybook and run snapshots
         env: 
-          RUN_ONLY: SNAPSHOTS
+          ONLY_RUN: SNAPSHOTS
         run: |
           npx concurrently -k -s first -n "SB,TEST" -c "magenta,blue" \
             "npx http-server storybook-static --port 6006 --silent" \
             "npx wait-on tcp:6006 && yarn test-storybook"
       - name: Serve Storybook and run a11y tests
         env: 
-          RUN_ONLY: A11Y
+          ONLY_RUN: A11Y
         run: |
           npx concurrently -k -s first -n "SB,TEST" -c "magenta,blue" \
             "npx http-server storybook-static --port 6006 --silent" \
