--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "@babel/preset-env": "^7.10",
     "@babel/preset-react": "^7.10",
     "@babel/preset-typescript": "^7.13.0",
+    "@danielhep/storybook-react-intl": "3.0.1",
     "@formatjs/cli": "^4.2.32",
     "@graphql-eslint/eslint-plugin": "^3.19.1",
     "@semantic-release/git": "^9.0.0",
     "@storybook/addon-a11y": "7.6.17",
     "@storybook/addon-actions": "7.6.17",
+    "@storybook/addon-controls": "^7.6.17",
     "@storybook/addon-docs": "7.6.17",
     "@storybook/addon-essentials": "7.6.17",
     "@storybook/addon-links": "7.6.17",
@@ -82,7 +84,6 @@
     "semver": "^7.3.2",
     "storybook": "7.6.17",
     "storybook-mock-date-decorator": "^1.0.2",
-    "@danielhep/storybook-react-intl": "3.0.1",
     "styled-components": "^5.3.0",
     "stylelint": "^10.1.0",
     "stylelint-config-prettier": "^5.2.0",
