--- a/packages/building-blocks/package.json
+++ b/packages/building-blocks/package.json
@@ -9,11 +9,13 @@
   "module": "esm/index.js",
   "private": false,
   "devDependencies": {
+    "@opentripplanner/core-utils": "^11.2.3",
     "@opentripplanner/types": "^6.4.0",
-    "@opentripplanner/core-utils": "^11.2.3"
+    "styled-icons": "^10.34.0"
   },
   "peerDependencies": {
     "react": "^16.14.0",
+    "react-animate-height": "^3.0.4",
     "styled-components": "^5.3.0"
   },
   "repository": {
@@ -27,5 +29,8 @@
   "bugs": {
     "url": "https://github.com/opentripplanner/otp-ui/issues"
   },
-  "gitHead": "0af1b7cda60bd4252b219dcf893e01c2acb2ed5d"
+  "gitHead": "0af1b7cda60bd4252b219dcf893e01c2acb2ed5d",
+  "dependencies": {
+    "styled-icons": "^10.47.1"
+  }
 }
