--- a/packages/base-map/package.json
+++ b/packages/base-map/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "mapbox-gl": "npm:empty-npm-package@1.0.0",
     "maplibre-gl": "^2.1.9",
-    "react-map-gl": "^7.0.15"
+    "react-map-gl": "^7.0.15",
+    "@opentripplanner/map-popup": "^3.1.0"
   },
   "peerDependencies": {
     "@opentripplanner/types": "^6.5.0",
