--- a/packages/endpoints-overlay/package.json
+++ b/packages/endpoints-overlay/package.json
@@ -23,7 +23,8 @@
     "@opentripplanner/location-icon": "^1.4.1",
     "@opentripplanner/core-utils": "^11.3.1",
     "flat": "^5.0.2",
-    "@styled-icons/fa-solid": "^10.34.0"
+    "@styled-icons/fa-solid": "^10.34.0",
+    "@opentripplanner/map-popup": "^3.1.0"
   },
   "devDependencies": {
     "@opentripplanner/types": "^6.5.0",
