--- a/packages/trip-form/package.json
+++ b/packages/trip-form/package.json
@@ -10,20 +10,22 @@
   "types": "lib/index.d.ts",
   "private": false,
   "dependencies": {
-    "@opentripplanner/core-utils": "^11.3.1",
     "@floating-ui/react": "^0.19.2",
+    "@opentripplanner/core-utils": "^11.3.1",
+    "@opentripplanner/building-blocks": "^1.0.3",
     "@styled-icons/bootstrap": "^10.34.0",
     "@styled-icons/boxicons-regular": "^10.38.0",
     "@styled-icons/fa-regular": "^10.37.0",
     "@styled-icons/fa-solid": "^10.37.0",
     "date-fns": "^2.28.0",
     "flat": "^5.0.2",
+    "react-animate-height": "^3.2.3",
     "react-indiana-drag-scroll": "^2.0.1",
     "react-inlinesvg": "^2.3.0"
   },
   "devDependencies": {
-    "@types/flat": "^5.0.2",
-    "@opentripplanner/types": "6.5.0"
+    "@opentripplanner/types": "6.5.0",
+    "@types/flat": "^5.0.2"
   },
   "peerDependencies": {
     "react": "^16.14.0",
