disable some incorrect a11y tests

--- a/.github/workflows/node-ci.yml
+++ b/.github/workflows/node-ci.yml
@@ -21,7 +21,7 @@ jobs:
         run: yarn check:i18n-en-fr
       - name: Type check
         run: yarn typescript
-      - name: Build Storybook
+      - name: Run unit tests
         run: yarn unit
       - name: Build Storybook
         run: yarn build-storybook --quiet
