--- a/packages/trip-form/package.json
+++ b/packages/trip-form/package.json
@@ -10,8 +10,7 @@
   "types": "lib/index.d.ts",
   "private": false,
   "dependencies": {
-    "@opentripplanner/core-utils": "^11.4.0",
-    "@floating-ui/react": "^0.19.2",
+    "@opentripplanner/core-utils": "^11.4.2",
     "@opentripplanner/building-blocks": "^1.0.3",
     "@styled-icons/bootstrap": "^10.34.0",
     "@styled-icons/boxicons-regular": "^10.38.0",
@@ -24,8 +23,9 @@
     "react-inlinesvg": "^2.3.0"
   },
   "devDependencies": {
-    "@opentripplanner/types": "6.5.0",
-    "@types/flat": "^5.0.2"
+    "@types/flat": "^5.0.2",
+    "@opentripplanner/types": "6.5.1"
+
   },
   "peerDependencies": {
     "react": "^16.14.0",
