--- a/packages/map-popup/package.json
+++ b/packages/map-popup/package.json
@@ -11,6 +11,7 @@
   "license": "MIT",
   "private": false,
   "dependencies": {
+    "@opentripplanner/building-blocks": "^1.2.2",
     "@opentripplanner/core-utils": "^11.4.3",
     "@opentripplanner/from-to-location-picker": "^2.1.13",
     "flat": "^5.0.2"
