--- a/packages/park-and-ride-overlay/package.json
+++ b/packages/park-and-ride-overlay/package.json
@@ -27,5 +27,8 @@
     "react-dom": "^16.8.6",
     "react-map-gl": "^7.0.15",
     "styled-components": "^5.3.0"
+  },
+  "devDependencies": {
+    "@opentripplanner/types": "^6.5.2"
   }
 }
