--- a/packages/location-field/package.json
+++ b/packages/location-field/package.json
@@ -23,7 +23,8 @@
   "peerDependencies": {
     "react": "^18.2.0",
     "react-intl": "^5.24.6",
-    "styled-components": "^5.3.0"
+    "styled-components": "^5.3.0",
+    "@opentripplanner/types": "^6.5.2"
   },
   "gitHead": "0af1b7cda60bd4252b219dcf893e01c2acb2ed5d",
   "scripts": {
