--- a/packages/map-popup/package.json
+++ b/packages/map-popup/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@opentripplanner/map-popup",
-  "version": "3.1.1-alpha.1",
+  "version": "5.0.0",
   "description": "A component for displaying map popup contents",
   "main": "lib/index.js",
   "module": "esm/index.js",
@@ -11,16 +11,17 @@
   "license": "MIT",
   "private": false,
   "dependencies": {
-    "@opentripplanner/base-map": "^3.1.0",
-    "@opentripplanner/core-utils": "^11.4.0",
-    "@opentripplanner/from-to-location-picker": "^2.1.12",
+    "@opentripplanner/base-map": "^3.2.2",
+    "@opentripplanner/building-blocks": "^1.2.2",
+    "@opentripplanner/core-utils": "^11.4.4",
+    "@opentripplanner/from-to-location-picker": "^2.1.14",
     "flat": "^5.0.2"
   },
   "devDependencies": {
-    "@opentripplanner/types": "^6.5.0"
+    "@opentripplanner/types": "^6.5.2"
   },
   "peerDependencies": {
-    "react": "^16.14.0",
+    "react": "^18.2.0",
     "react-intl": "^5.24.6",
     "styled-components": "^5.3.0"
   },
