--- a/packages/otp2-tile-overlay/package.json
+++ b/packages/otp2-tile-overlay/package.json
@@ -16,10 +16,10 @@
     "react-map-gl": "^7.0.15"
   },
   "dependencies": {
-    "@opentripplanner/map-popup": "^4.0.0"
+    "@opentripplanner/map-popup": "^v3.2.0-alpha.1"
   },
   "devDependencies": {
-    "@opentripplanner/base-map": "^3.2.2",
+    "@opentripplanner/base-map": "^4.0.0",
     "@opentripplanner/types": "^6.5.2"
   }
 }
