--- a/packages/otp2-tile-overlay/package.json
+++ b/packages/otp2-tile-overlay/package.json
@@ -16,7 +16,7 @@
     "react-map-gl": "^7.0.15"
   },
   "dependencies": {
-    "@opentripplanner/map-popup": "^v3.2.0-alpha.1"
+    "@opentripplanner/map-popup": "^v5.1.0"
   },
   "devDependencies": {
     "@opentripplanner/base-map": "^4.0.0",
