--- a/.github/workflows/node-ci.yml
+++ b/.github/workflows/node-ci.yml
@@ -5,6 +5,9 @@ jobs:
       - uses: actions/checkout@v2
         with:
           persist-credentials: false
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 8
       - name: Use Node.js 21.x
         uses: actions/setup-node@v4
         with:
