--- a/.github/workflows/node-ci.yml
+++ b/.github/workflows/node-ci.yml
@@ -13,6 +13,8 @@ jobs:
         with:
           node-version: 21.x
           cache: "pnpm"
+      - name: Install dependencies
+        run: pnpm install --frozen-lockfile
       - name: Install Playwright
         run: npx playwright install --with-deps
       - name: Lint code
