replace semantic-release-npm with pnpm

--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "react-test-renderer": "^16.14.0",
     "semantic-release": "^17.1.1",
     "semantic-release-monorepo": "^7.0.2",
+    "semantic-release-pnpm": "^1.0.2",
     "semver": "^7.3.2",
     "storybook": "7.6.17",
     "storybook-mock-date-decorator": "^1.0.2",
