fix: add it back because we needed it after all

--- a/packages/transitive-overlay/package.json
+++ b/packages/transitive-overlay/package.json
@@ -32,6 +32,7 @@
   },
   "devDependencies": {
     "@opentripplanner/endpoints-overlay": "workspace:*",
+    "@opentripplanner/itinerary-body": "workspace:*",
     "@opentripplanner/types": "workspace:*"
   },
   "peerDependencies": {
