update storybook to v8.6

--- a/packages/base-map/package.json
+++ b/packages/base-map/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "maplibre-gl": "^2.1.9",
     "react-map-gl": "^7.0.15",
+    "mapbox-gl": "npm:empty-npm-package@1.0.0",
     "@opentripplanner/building-blocks": "workspace:*"
   },
   "peerDependencies": {
