--- a/package.json
+++ b/package.json
@@ -29,20 +29,19 @@
     "@formatjs/cli": "^4.2.32",
     "@graphql-eslint/eslint-plugin": "^3.19.1",
     "@semantic-release/git": "^10.0.1",
-    "@storybook/addon-a11y": "7.6.17",
-    "@storybook/addon-actions": "7.6.17",
-    "@storybook/addon-controls": "^7.6.17",
-    "@storybook/addon-docs": "7.6.17",
-    "@storybook/addon-essentials": "7.6.17",
-    "@storybook/addon-links": "7.6.17",
-    "@storybook/addon-storyshots": "7.6.17",
-    "@storybook/addon-storyshots-puppeteer": "7.6.17",
-    "@storybook/addon-storysource": "7.6.17",
-    "@storybook/addon-viewport": "7.6.17",
-    "@storybook/react": "7.6.17",
-    "@storybook/react-webpack5": "7.6.17",
+    "@storybook/addon-a11y": "^8.6.4",
+    "@storybook/addon-actions": "^8.6.4",
+    "@storybook/addon-controls": "^8.6.4",
+    "@storybook/addon-docs": "^8.6.4",
+    "@storybook/addon-essentials": "^8.6.4",
+    "@storybook/addon-links": "^8.6.4",
+    "@storybook/addon-storysource": "^8.6.4",
+    "@storybook/addon-viewport": "^8.6.4",
+    "@storybook/addon-webpack5-compiler-babel": "^3.0.5",
+    "@storybook/react": "^8.6.4",
+    "@storybook/react-webpack5": "^8.6.4",
     "@storybook/storybook-deployer": "^2.8.10",
-    "@storybook/test-runner": "^0.16.0",
+    "@storybook/test-runner": "^0.19.1",
     "@types/jest": "^26.0.23",
     "@types/node": "^15.0.0",
     "@types/styled-components": "^5.1.9",
@@ -92,8 +91,8 @@
     "semantic-release-monorepo": "^8.0.2",
     "semantic-release-pnpm": "^1.0.2",
     "semver": "^7.3.2",
-    "storybook": "7.6.17",
-    "storybook-mock-date-decorator": "^1.0.2",
+    "storybook": "^8.6.4",
+    "storybook-mock-date-decorator": "^2.0.6",
     "styled-components": "^5.3.0",
     "stylelint": "^10.1.0",
     "stylelint-config-prettier": "^5.2.0",
