chore: Use pnpm catalog entry for react versions.

--- a/packages/printable-itinerary/package.json
+++ b/packages/printable-itinerary/package.json
@@ -17,7 +17,7 @@
     "@opentripplanner/icons": "workspace:*"
   },
   "peerDependencies": {
-    "react": "^18.2.0",
+    "react": "catalog:",
     "styled-components": "^5.3.0"
   },
   "bugs": {
