--- a/packages/transitive-overlay/package.json
+++ b/packages/transitive-overlay/package.json
@@ -36,7 +36,7 @@
     "@opentripplanner/types": "workspace:*"
   },
   "peerDependencies": {
-    "react": "^18.2.0",
+    "react": "catalog:",
     "react-map-gl": "^7.0.15"
   }
 }
