--- a/package.json
+++ b/package.json
@@ -83,7 +83,7 @@
     "prettier": "^1.19.1",
     "puppeteer": "^10.2.0",
     "querystring-es3": "^0.2.1",
-    "react": "^18.2.0",
+    "react": "catalog:",
     "react-dom": "^18.2.0",
     "react-intl": "^6.8.4",
     "react-test-renderer": "^16.14.0",
