--- a/packages/base-map/package.json
+++ b/packages/base-map/package.json
@@ -15,7 +15,7 @@
     "@opentripplanner/building-blocks": "workspace:*"
   },
   "peerDependencies": {
-    "react": "^18.2.0",
+    "react": "catalog:",
     "@opentripplanner/types": "workspace:*",
     "styled-components": "^5.3.0"
   },
