--- a/packages/building-blocks/package.json
+++ b/packages/building-blocks/package.json
@@ -13,7 +13,7 @@
     "@opentripplanner/core-utils": "workspace:*"
   },
   "peerDependencies": {
-    "react": "^18.2.0",
+    "react": "catalog:",
     "react-animate-height": "^3.0.4",
     "styled-components": "^5.3.0"
   },
