--- a/packages/endpoints-overlay/package.json
+++ b/packages/endpoints-overlay/package.json
@@ -31,7 +31,7 @@
     "@types/flat": "^5.0.2"
   },
   "peerDependencies": {
-    "react": "^18.2.0",
+    "react": "catalog:",
     "react-dom": "^18.2.0",
     "react-intl": "^6.8.4",
     "react-map-gl": "^7.0.15",
