--- a/packages/from-to-location-picker/package.json
+++ b/packages/from-to-location-picker/package.json
@@ -16,7 +16,7 @@
     "@opentripplanner/types": "workspace:*"
   },
   "peerDependencies": {
-    "react": "^18.2.0",
+    "react": "catalog:",
     "react-intl": "^6.8.4",
     "styled-components": "^5.3.0"
   },
