--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -14,7 +14,7 @@
     "prop-types": "^15.7.2"
   },
   "peerDependencies": {
-    "react": "^18.2.0"
+    "react": "catalog:"
   },
   "bugs": {
     "url": "https://github.com/opentripplanner/otp-ui/issues"
