--- a/packages/itinerary-body/package.json
+++ b/packages/itinerary-body/package.json
@@ -28,7 +28,7 @@
     "@types/flat": "^5.0.2"
   },
   "peerDependencies": {
-    "react": "^18.2.0",
+    "react": "catalog:",
     "styled-components": "^5.3.0"
   },
   "bugs": {
