--- a/packages/location-icon/package.json
+++ b/packages/location-icon/package.json
@@ -14,7 +14,7 @@
     "@styled-icons/fa-solid": "^10.34.0"
   },
   "peerDependencies": {
-    "react": "^18.2.0",
+    "react": "catalog:",
     "styled-components": "^5.3.0"
   },
   "gitHead": "644c72e0d08f8daf93b44eaf0deec88a1e16f414",
