--- a/packages/otp2-tile-overlay/package.json
+++ b/packages/otp2-tile-overlay/package.json
@@ -12,7 +12,7 @@
     "tsc": "tsc"
   },
   "peerDependencies": {
-    "react": "^18.2.0",
+    "react": "catalog:",
     "react-map-gl": "^7.0.15"
   },
   "dependencies": {
