--- a/packages/park-and-ride-overlay/package.json
+++ b/packages/park-and-ride-overlay/package.json
@@ -24,7 +24,7 @@
     "@opentripplanner/types": "workspace:*"
   },
   "peerDependencies": {
-    "react": "^18.2.0",
+    "react": "catalog:",
     "react-dom": "^18.2.0",
     "react-map-gl": "^7.0.15",
     "styled-components": "^5.3.0"
