--- a/packages/stops-overlay/package.json
+++ b/packages/stops-overlay/package.json
@@ -29,7 +29,7 @@
     "styled-icons": "^10.34.0"
   },
   "peerDependencies": {
-    "react": "^18.2.0",
+    "react": "catalog:",
     "react-intl": "^6.8.4",
     "react-map-gl": "^7.0.15",
     "styled-components": "^5.3.0"
