--- a/packages/transit-vehicle-overlay/package.json
+++ b/packages/transit-vehicle-overlay/package.json
@@ -18,7 +18,7 @@
     "@opentripplanner/types": "workspace:*"
   },
   "peerDependencies": {
-    "react": "^18.2.0",
+    "react": "catalog:",
     "react-intl": "^6.8.4",
     "react-map-gl": "^7.0.15",
     "styled-components": "^5.3.0"
