--- a/packages/trip-details/package.json
+++ b/packages/trip-details/package.json
@@ -21,7 +21,7 @@
     "@types/flat": "^5.0.2"
   },
   "peerDependencies": {
-    "react": "^18.2.0",
+    "react": "catalog:",
     "react-intl": "^6.8.4",
     "styled-components": "^5.3.0"
   },
