--- a/packages/endpoints-overlay/package.json
+++ b/packages/endpoints-overlay/package.json
@@ -34,7 +34,7 @@
     "react": "catalog:",
     "react-dom": "^18.2.0",
     "react-intl": "^6.8.4",
-    "react-map-gl": "^7.0.15",
+    "react-map-gl": "catalog:",
     "styled-components": "catalog:"
   }
 }
