--- a/packages/otp2-tile-overlay/package.json
+++ b/packages/otp2-tile-overlay/package.json
@@ -13,7 +13,7 @@
   },
   "peerDependencies": {
     "react": "catalog:",
-    "react-map-gl": "^7.0.15"
+    "react-map-gl": "catalog:"
   },
   "dependencies": {
     "@opentripplanner/map-popup": "workspace:*"
