--- a/packages/park-and-ride-overlay/package.json
+++ b/packages/park-and-ride-overlay/package.json
@@ -26,7 +26,7 @@
   "peerDependencies": {
     "react": "catalog:",
     "react-dom": "^18.2.0",
-    "react-map-gl": "^7.0.15",
+    "react-map-gl": "catalog:",
     "styled-components": "catalog:"
   }
 }
