--- a/packages/transit-vehicle-overlay/package.json
+++ b/packages/transit-vehicle-overlay/package.json
@@ -20,7 +20,7 @@
   "peerDependencies": {
     "react": "catalog:",
     "react-intl": "^6.8.4",
-    "react-map-gl": "^7.0.15",
+    "react-map-gl": "catalog:",
     "styled-components": "catalog:"
   },
   "repository": {
