--- a/packages/trip-viewer-overlay/package.json
+++ b/packages/trip-viewer-overlay/package.json
@@ -25,7 +25,7 @@
   },
   "peerDependencies": {
     "react": "catalog:",
-    "react-map-gl": "^7.0.15"
+    "react-map-gl": "catalog:"
   },
   "gitHead": "0af1b7cda60bd4252b219dcf893e01c2acb2ed5d"
 }
