--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,5 +1,6 @@
 catalog:
   react: ^18.2.0
-  styled-components: ^5.3.11
+  react-map-gl: ^7.0.15
+  styled-components: ^5.3.0
 packages:
   - packages/*
