--- a/packages/transit-vehicle-overlay/package.json
+++ b/packages/transit-vehicle-overlay/package.json
@@ -19,7 +19,7 @@
   },
   "peerDependencies": {
     "react": "catalog:",
-    "react-intl": "^6.8.4",
+    "react-intl": "catalog:",
     "react-map-gl": "catalog:",
     "styled-components": "catalog:"
   },
