--- a/packages/itinerary-body/package.json
+++ b/packages/itinerary-body/package.json
@@ -19,7 +19,7 @@
     "date-fns": "^2.28.0",
     "date-fns-tz": "^1.2.2",
     "flat": "^5.0.2",
-    "react-animate-height": "^3.0.4",
+    "react-animate-height": "catalog:",
     "react-resize-detector": "^4.2.1",
     "string-similarity": "^4.0.4"
   },
