--- a/packages/park-and-ride-overlay/package.json
+++ b/packages/park-and-ride-overlay/package.json
@@ -25,7 +25,7 @@
   },
   "peerDependencies": {
     "react": "catalog:",
-    "react-dom": "^18.2.0",
+    "react-dom": "catalog:",
     "react-map-gl": "catalog:",
     "styled-components": "catalog:"
   }
