--- a/packages/trip-form/package.json
+++ b/packages/trip-form/package.json
@@ -20,7 +20,7 @@
     "@styled-icons/fa-solid": "^10.37.0",
     "date-fns": "^2.28.0",
     "flat": "^5.0.2",
-    "react-animate-height": "^3.0.4",
+    "react-animate-height": "catalog:",
     "react-indiana-drag-scroll": "^2.0.1",
     "react-inlinesvg": "^2.3.0"
   },
@@ -30,7 +30,7 @@
   },
   "peerDependencies": {
     "react": "catalog:",
-    "react-intl": "^6.8.4",
+    "react-intl": "catalog:",
     "styled-components": "catalog:"
   },
   "repository": {
