--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,5 +1,8 @@
 catalog:
   react: ^18.2.0
+  react-animate-height: ^3.0.4
+  react-dom: ^18.2.0
+  react-intl: ^6.8.4
   react-map-gl: ^7.0.15
   styled-components: ^5.3.0
 packages:
